--- a/assets/styles.css
+++ b/assets/styles.css
@@ -17,8 +17,20 @@ header {
     color: var(--bs-white);
     background: linear-gradient(180deg, var(--bs-indigo), var(--bs-blue));
     font-size: 2.5rem;
-    text-align: right;
-    padding-right: 40px;
+    text-align: center;
     margin-bottom: 10px;
 }
 
+.searchButton {
+    color: var(--bs-white);
+    background-color: var(--bs-blue);
+    margin-bottom: .5em;
+    width: auto;
+    border-radius: 5px;
+}
+
+.inputBox {
+    margin-bottom: .5em;
+    width: auto;
+    border-radius: 5px;
+}
